bug: 40228 - fixed overlapping text issue.
http://bugzilla.zimbra.com/show_bug.cgi?id=40228

Copied from Perforce
 Change: 212861

--- a/WebRoot/css/wm6.css
+++ b/WebRoot/css/wm6.css
@@ -57,6 +57,7 @@ a {
 
 .label {
     color: #4d8dc3;width:20%;float:left;
+    white-space:nowrap;
 }
 .value {width:78%;text-align:right;}
 .list-row-1, .list-row-2, .list-row-3 {
